--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/aos": "^3.0.4",
     "@types/jest": "^28.1.8",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
