--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-preset-env": "^7.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
@@ -47,6 +48,7 @@
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "react-icons": "^4.4.0",
+    "react-scroll": "^1.8.9",
     "swiper": "^8.3.2",
     "tailwindcss": "^3.1.8"
   }
