--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/react-router-hash-link": "^2.4.6",
+    "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "postcss-cli": "^9.1.0",
