--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/aos": "^3.0.4",
+    "@types/i18n": "^0.13.6",
     "@types/jest": "^28.1.8",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
@@ -14,11 +15,13 @@
     "@types/react-router-hash-link": "^2.4.6",
     "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.14",
+    "i18next": "^23.2.6",
     "postcss": "^8.4.23",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
