--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
+    "react-router": "^6.14.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
