--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Atlon1.github.io/my-gym",
   "name": "gym-site",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "@types/react-router-hash-link": "^2.4.6",
     "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
     "i18next": "^23.2.6",
     "postcss": "^8.4.23",
     "postcss-cli": "^9.1.0",
@@ -29,6 +31,8 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,6 +55,7 @@
   },
   "devDependencies": {
     "aos": "^2.3.4",
+    "gh-pages": "^5.0.0",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "react-icons": "^4.4.0",
