--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/aos": "^3.0.4",
+    "@types/gh-pages": "^3.2.1",
     "@types/i18n": "^0.13.6",
     "@types/jest": "^28.1.8",
     "@types/node": "^17.0.45",
@@ -55,8 +56,8 @@
   },
   "devDependencies": {
     "aos": "^2.3.4",
-    "gh-pages": "^5.0.0",
     "autoprefixer": "^10.4.8",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.16",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.9",
