--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Atlon1.github.io/my-gym",
+  "homepage": "http://Atlon1.github.io/gym-site",
   "name": "gym-site",
   "version": "0.1.0",
   "private": true,
